M1S1V2-IAFA/TL/Compilateur/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statements

   9  statements : statement statements
  10             | statement

  11  statement : cell ASSIGN expression
  12            | ID ASSIGN expression
  13            | ID ASSIGN when_loop
  14            | cell ASSIGN when_loop
  15            | IF condition THEN statements else_statement END

  16  else_statement :
  17                 | ELSE statements
  18                 | ELSEIF condition THEN statements else_statement

  19  condition : expression EQUAL expression
  20            | expression NOTEQUAL expression
  21            | expression LT expression
  22            | expression GT expression
  23            | expression LE expression
  24            | expression GE expression

  25  cell : LBRACKET INT COMMA INT RBRACKET

  26  when_loop : expression OTHERWISE
  27            | expression WHEN condition COMMA when_loop

  28  expression : term
  29             | expression PLUS term
  30             | expression MINUS term

  31  term : signed_expression
  32       | term MULT signed_expression
  33       | term DIV signed_expression
  34       | term MOD signed_expression

  35  signed_expression : raw_expression
  36                    | PLUS raw_expression
  37                    | MINUS raw_expression

  38  raw_expression : cell
  39                 | INT
  40                 | ID
  41                 | LPARENT expression RPARENT

  42  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (42)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (42)

	.  reduce 42


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 7

	opt_statements  goto 21
	statements  goto 22
	statement  goto 23
	cell  goto 24


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 25


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 26
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (25)

	INT  shift 27
	.  error


state 19
	statement : IF . condition THEN statements else_statement END  (15)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34
	condition  goto 35
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 20
	statement : ID . ASSIGN expression  (12)
	statement : ID . ASSIGN when_loop  (13)

	ASSIGN  shift 39
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 40
	.  error


state 22
	opt_statements : statements .  (8)

	.  reduce 8


state 23
	statements : statement . statements  (9)
	statements : statement .  (10)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 10
	END  reduce 10
	ELSEIF  reduce 10
	ELSE  reduce 10

	statements  goto 41
	statement  goto 23
	cell  goto 24


state 24
	statement : cell . ASSIGN expression  (11)
	statement : cell . ASSIGN when_loop  (14)

	ASSIGN  shift 42
	.  error


state 25
	fields : fields COMMA field .  (5)

	.  reduce 5


state 26
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 43
	.  error


state 27
	cell : LBRACKET INT . COMMA INT RBRACKET  (25)

	COMMA  shift 44
	.  error


state 28
	raw_expression : LPARENT . expression RPARENT  (41)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 45
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 29
	signed_expression : PLUS . raw_expression  (36)

	LBRACKET  shift 18
	LPARENT  shift 28
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	raw_expression  goto 46


state 30
	signed_expression : MINUS . raw_expression  (37)

	LBRACKET  shift 18
	LPARENT  shift 28
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	raw_expression  goto 47


state 31
	raw_expression : ID .  (40)

	.  reduce 40


state 32
	raw_expression : INT .  (39)

	.  reduce 39


state 33
	raw_expression : cell .  (38)

	.  reduce 38


state 34
	condition : expression . EQUAL expression  (19)
	condition : expression . NOTEQUAL expression  (20)
	condition : expression . LT expression  (21)
	condition : expression . GT expression  (22)
	condition : expression . LE expression  (23)
	condition : expression . GE expression  (24)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	LT  shift 50
	GT  shift 51
	LE  shift 52
	GE  shift 53
	EQUAL  shift 54
	NOTEQUAL  shift 55
	.  error


state 35
	statement : IF condition . THEN statements else_statement END  (15)

	THEN  shift 56
	.  error


state 36
	expression : term .  (28)
	term : term . MULT signed_expression  (32)
	term : term . DIV signed_expression  (33)
	term : term . MOD signed_expression  (34)

	MOD  shift 57
	MULT  shift 58
	DIV  shift 59
	EOF  reduce 28
	END  reduce 28
	COMMA  reduce 28
	LBRACKET  reduce 28
	RPARENT  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	IF  reduce 28
	THEN  reduce 28
	ELSEIF  reduce 28
	ELSE  reduce 28
	LT  reduce 28
	GT  reduce 28
	LE  reduce 28
	GE  reduce 28
	EQUAL  reduce 28
	NOTEQUAL  reduce 28
	WHEN  reduce 28
	OTHERWISE  reduce 28
	ID  reduce 28


state 37
	term : signed_expression .  (31)

	.  reduce 31


state 38
	signed_expression : raw_expression .  (35)

	.  reduce 35


state 39
	statement : ID ASSIGN . expression  (12)
	statement : ID ASSIGN . when_loop  (13)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 60
	when_loop  goto 61
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 40
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 41
	statements : statement statements .  (9)

	.  reduce 9


state 42
	statement : cell ASSIGN . expression  (11)
	statement : cell ASSIGN . when_loop  (14)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 62
	when_loop  goto 63
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 43
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 44
	cell : LBRACKET INT COMMA . INT RBRACKET  (25)

	INT  shift 64
	.  error


state 45
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)
	raw_expression : LPARENT expression . RPARENT  (41)

	RPARENT  shift 65
	PLUS  shift 48
	MINUS  shift 49
	.  error


state 46
	signed_expression : PLUS raw_expression .  (36)

	.  reduce 36


state 47
	signed_expression : MINUS raw_expression .  (37)

	.  reduce 37


state 48
	expression : expression PLUS . term  (29)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	term  goto 66
	signed_expression  goto 37
	raw_expression  goto 38


state 49
	expression : expression MINUS . term  (30)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	term  goto 67
	signed_expression  goto 37
	raw_expression  goto 38


state 50
	condition : expression LT . expression  (21)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 68
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 51
	condition : expression GT . expression  (22)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 69
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 52
	condition : expression LE . expression  (23)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 70
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 53
	condition : expression GE . expression  (24)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 71
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 54
	condition : expression EQUAL . expression  (19)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 72
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 55
	condition : expression NOTEQUAL . expression  (20)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 73
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 56
	statement : IF condition THEN . statements else_statement END  (15)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	.  error

	statements  goto 74
	statement  goto 23
	cell  goto 24


state 57
	term : term MOD . signed_expression  (34)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	signed_expression  goto 75
	raw_expression  goto 38


state 58
	term : term MULT . signed_expression  (32)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	signed_expression  goto 76
	raw_expression  goto 38


state 59
	term : term DIV . signed_expression  (33)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	signed_expression  goto 77
	raw_expression  goto 38


state 60
	statement : ID ASSIGN expression .  (12)
	when_loop : expression . OTHERWISE  (26)
	when_loop : expression . WHEN condition COMMA when_loop  (27)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	WHEN  shift 78
	OTHERWISE  shift 79
	EOF  reduce 12
	END  reduce 12
	LBRACKET  reduce 12
	IF  reduce 12
	ELSEIF  reduce 12
	ELSE  reduce 12
	ID  reduce 12


state 61
	statement : ID ASSIGN when_loop .  (13)

	.  reduce 13


state 62
	statement : cell ASSIGN expression .  (11)
	when_loop : expression . OTHERWISE  (26)
	when_loop : expression . WHEN condition COMMA when_loop  (27)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	WHEN  shift 78
	OTHERWISE  shift 79
	EOF  reduce 11
	END  reduce 11
	LBRACKET  reduce 11
	IF  reduce 11
	ELSEIF  reduce 11
	ELSE  reduce 11
	ID  reduce 11


state 63
	statement : cell ASSIGN when_loop .  (14)

	.  reduce 14


state 64
	cell : LBRACKET INT COMMA INT . RBRACKET  (25)

	RBRACKET  shift 80
	.  error


state 65
	raw_expression : LPARENT expression RPARENT .  (41)

	.  reduce 41


state 66
	expression : expression PLUS term .  (29)
	term : term . MULT signed_expression  (32)
	term : term . DIV signed_expression  (33)
	term : term . MOD signed_expression  (34)

	MOD  shift 57
	MULT  shift 58
	DIV  shift 59
	EOF  reduce 29
	END  reduce 29
	COMMA  reduce 29
	LBRACKET  reduce 29
	RPARENT  reduce 29
	PLUS  reduce 29
	MINUS  reduce 29
	IF  reduce 29
	THEN  reduce 29
	ELSEIF  reduce 29
	ELSE  reduce 29
	LT  reduce 29
	GT  reduce 29
	LE  reduce 29
	GE  reduce 29
	EQUAL  reduce 29
	NOTEQUAL  reduce 29
	WHEN  reduce 29
	OTHERWISE  reduce 29
	ID  reduce 29


state 67
	expression : expression MINUS term .  (30)
	term : term . MULT signed_expression  (32)
	term : term . DIV signed_expression  (33)
	term : term . MOD signed_expression  (34)

	MOD  shift 57
	MULT  shift 58
	DIV  shift 59
	EOF  reduce 30
	END  reduce 30
	COMMA  reduce 30
	LBRACKET  reduce 30
	RPARENT  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	IF  reduce 30
	THEN  reduce 30
	ELSEIF  reduce 30
	ELSE  reduce 30
	LT  reduce 30
	GT  reduce 30
	LE  reduce 30
	GE  reduce 30
	EQUAL  reduce 30
	NOTEQUAL  reduce 30
	WHEN  reduce 30
	OTHERWISE  reduce 30
	ID  reduce 30


state 68
	condition : expression LT expression .  (21)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 21
	THEN  reduce 21


state 69
	condition : expression GT expression .  (22)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 22
	THEN  reduce 22


state 70
	condition : expression LE expression .  (23)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 23
	THEN  reduce 23


state 71
	condition : expression GE expression .  (24)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 24
	THEN  reduce 24


state 72
	condition : expression EQUAL expression .  (19)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 19
	THEN  reduce 19


state 73
	condition : expression NOTEQUAL expression .  (20)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	COMMA  reduce 20
	THEN  reduce 20


state 74
	statement : IF condition THEN statements . else_statement END  (15)
	else_statement : .  (16)

	ELSEIF  shift 81
	ELSE  shift 82
	END  reduce 16

	else_statement  goto 83


state 75
	term : term MOD signed_expression .  (34)

	.  reduce 34


state 76
	term : term MULT signed_expression .  (32)

	.  reduce 32


state 77
	term : term DIV signed_expression .  (33)

	.  reduce 33


state 78
	when_loop : expression WHEN . condition COMMA when_loop  (27)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34
	condition  goto 84
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 79
	when_loop : expression OTHERWISE .  (26)

	.  reduce 26


state 80
	cell : LBRACKET INT COMMA INT RBRACKET .  (25)

	.  reduce 25


state 81
	else_statement : ELSEIF . condition THEN statements else_statement  (18)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34
	condition  goto 85
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 82
	else_statement : ELSE . statements  (17)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	.  error

	statements  goto 86
	statement  goto 23
	cell  goto 24


state 83
	statement : IF condition THEN statements else_statement . END  (15)

	END  shift 87
	.  error


state 84
	when_loop : expression WHEN condition . COMMA when_loop  (27)

	COMMA  shift 88
	.  error


state 85
	else_statement : ELSEIF condition . THEN statements else_statement  (18)

	THEN  shift 89
	.  error


state 86
	else_statement : ELSE statements .  (17)

	.  reduce 17


state 87
	statement : IF condition THEN statements else_statement END .  (15)

	.  reduce 15


state 88
	when_loop : expression WHEN condition COMMA . when_loop  (27)

	LBRACKET  shift 18
	LPARENT  shift 28
	PLUS  shift 29
	MINUS  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 90
	when_loop  goto 91
	term  goto 36
	signed_expression  goto 37
	raw_expression  goto 38


state 89
	else_statement : ELSEIF condition THEN . statements else_statement  (18)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	.  error

	statements  goto 92
	statement  goto 23
	cell  goto 24


state 90
	when_loop : expression . OTHERWISE  (26)
	when_loop : expression . WHEN condition COMMA when_loop  (27)
	expression : expression . PLUS term  (29)
	expression : expression . MINUS term  (30)

	PLUS  shift 48
	MINUS  shift 49
	WHEN  shift 78
	OTHERWISE  shift 79
	.  error


state 91
	when_loop : expression WHEN condition COMMA when_loop .  (27)

	.  reduce 27


state 92
	else_statement : ELSEIF condition THEN statements . else_statement  (18)
	else_statement : .  (16)

	ELSEIF  shift 81
	ELSE  shift 82
	END  reduce 16

	else_statement  goto 93


state 93
	else_statement : ELSEIF condition THEN statements else_statement .  (18)

	.  reduce 18


34 terminals, 17 nonterminals
43 grammar rules, 94 states
